+ Hadeth Home Fragment Design + Hadeth Detail Activity  note:It have logical error need to solve

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         </activity>
 
         <activity android:name=".Ui.home.tabs.Chapter.SuraDetailsActivity"/>
+
+        <activity android:name=".Ui.home.tabs.hadeth.hadethContent.HadethContentActivity"/>
+
     </application>
 
 </manifest>
